--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.PostFragment">
+    tools:context=".ui.UserFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
